<resources>
    <string name="app_name">HalfTheWorld</string>
    <string name="username">Your username</string>
    <string name="email">example@email.com</string>
    <string name="password">Your password</string>
    <string name="register">Register</string>
    <string name="userData">User Data</string>
    <string name="show">SHOW</string>
    <string name="Confirm">Confirm your password</string>
    <string name="title">Titre Momentané Mais qui Claque Sa Race</string>
    <string name="login">Login</string>
    <string name="errorUsername">This username does not exists</string>
    <string name="errorPassword">Wrong password</string>
    <string name="newbie">New in this awesome app?\n register here</string>
    <string name="errorConnection">It appears connection failed\n Please try again later</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_google_places">Map</string>
    <string name="google_maps_key">AIzaSyAhtc0kRj-Iz3VF-6cagHR3CTppKLNdlZc</string>
    <string name="thanx">Thank you</string>
    <string name="position">Could not pinpoint your position</string>
    <string name="reconsider">This app cannot function without access to your location, please choose wisely</string>
</resources>
